bug fix
hamburger meny off center

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ h2 {
         display: flex;
         width: 100%; /* Full width for hamburger */
         justify-content: center; /* Center the hamburger icon */
+        padding: 15px 0;
     }
 
     /* Adjust content container for mobile */
